Got closures working
