# restapi/operations/finger_paths_post_responses.go
@@ -1,6 +1,6 @@
 // Code generated by go-swagger; DO NOT EDIT.
 
-package fingerpaths
+package operations
 
 // This file was generated by the swagger tool.
 // Editing this file might prove futile when you re-run the swagger generate command
